@@ -31,7 +31,7 @@ struct GstData {
 };
 
 static void gstChangeStatus(GstPlayer*, GstStatus);
-static void gstPlay(GstPlayer*, const char* const);
+static void gstPlay(GstPlayer*, const char*, const char*);
 static void gstStop(GstPlayer*);
 static void gstRegister(GstPlayer*, GstCallback, void*);
 static void gstRelease(GstPlayer*);
@@ -78,7 +78,7 @@ static void on_pad_added (GstElement *element, GstPad *pad, gpointer data)
     gst_object_unref (sinkpad);
 }
 
-static void gstPlay(GstPlayer* gst, const char* url)
+static void gstPlay(GstPlayer* gst, const char* type, const char* url)
 {
     GstElement *source, *audio, *decoder, *demuxer;
     GstData* data = (GstData*) gst->data;
@@ -92,15 +92,26 @@ static void gstPlay(GstPlayer* gst, const char* url)
     data->loop = g_main_loop_new(NULL, FALSE);
 
     data->bin = gst_element_factory_make("pipeline", "BetaRadio");
-    source = gst_element_factory_make ("mmssrc", "source");
-    g_object_set(G_OBJECT (source), "location", url, NULL);
-    demuxer = gst_element_factory_make("ffdemux_asf", "demuxer");
-    decoder = gst_element_factory_make("ffdec_wmav2", "decoder");
-    audio = gst_element_factory_make("autoaudiosink", "audio");
-    gst_bin_add_many(GST_BIN(data->bin), source, demuxer, decoder, audio, NULL);
-    gst_element_link(source, demuxer);
-    gst_element_link(decoder, audio);
-    g_signal_connect(demuxer, "pad-added", G_CALLBACK(on_pad_added), decoder);
+
+    if (strcmp("mms", type) == 0) {
+        source = gst_element_factory_make ("mmssrc", "source");
+        g_object_set(G_OBJECT (source), "location", url, NULL);
+        demuxer = gst_element_factory_make("ffdemux_asf", "demuxer");
+        decoder = gst_element_factory_make("ffdec_wmav2", "decoder");
+        audio = gst_element_factory_make("autoaudiosink", "audio");
+        gst_bin_add_many(GST_BIN(data->bin), source, demuxer, decoder, audio, NULL);
+        gst_element_link(source, demuxer);
+        gst_element_link(decoder, audio);
+        g_signal_connect(demuxer, "pad-added", G_CALLBACK(on_pad_added), decoder);
+    } else if (strcmp("mp3", type) == 0) {
+        source = gst_element_factory_make ("souphttpsrc", "source");
+        g_object_set(G_OBJECT (source), "location", url, NULL);
+        decoder = gst_element_factory_make("mad", "decoder");
+        audio = gst_element_factory_make("autoaudiosink", "audio");
+        gst_bin_add_many(GST_BIN(data->bin), source, decoder, audio, NULL);
+        gst_element_link_many(source, decoder, audio, NULL);
+    }
+
     gst_element_set_state(data->bin, GST_STATE_PLAYING);
 
     bus = gst_pipeline_get_bus(GST_PIPELINE(data->bin));
