@@ -8,6 +8,10 @@
 	* utils/ptt.json: Fix wrong json format.
 	* utils/hichannel.json,
 	utils/ptt.json: Add property.
+	* po/zh_TW.po,
+	src/betaradio.c,
+	src/gstplay.c,
+	src/gstplay.h: Add mp3 streaming support and allow different sources.
 
 2010-06-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
